--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 </a>
                 
                 <!-- Portfolio item 06 -->
-                <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="img/portfolio-06.jpg" alt="" class="portfolio__img">
+                <a href="tenzies.html" class="portfolio__item">
+                    <img src="img/tenzies/tenzies-portfolio.png" alt="" class="portfolio__img">
                 </a>
                 
             </div>
