--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                 </a>
                 
                 <!-- Portfolio item 05 -->
-                <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="img/portfolio-05.jpg" alt="" class="portfolio__img">
+                <a href="notes.html" class="portfolio__item">
+                    <img src="img/notes/notes-portfolio.png" alt="" class="portfolio__img">
                 </a>
                 
                 <!-- Portfolio item 06 -->
