added new project

--- a/quizzical.html
+++ b/quizzical.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tenzies Game</title>
+        <title>Notes App</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
         
@@ -33,20 +33,20 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                The game <strong>of 'Tenzies'</strong>
+                Random topics <strong>Quizzical App</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">A React built SPA</p>
-            <img src="img/tenzies/tenzies-intro.png" alt="" class="intro__img intro__img--project">
+            <img src="img/quizzical/quizzical-intro.png" alt="" class="intro__img intro__img--project">
         </section>
         
         <div class="portfolio-item-individual">
             <p>
-                Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?
-                <span>Click the link <a href="https://r-tenzies.vercel.app/" target="_blank">https://r-tenzies.vercel.app</a> or 👇</span>
+                Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate.
+                <span>Click the link <a href="https://r-quizzical.vercel.app/" target="_blank">https://r-quizzical.vercel.app</a> or 👇</span>
             </p>
-            <a href="https://r-tenzies.vercel.app/" target="_blank">
+            <a href="https://r-quizzical.vercel.app/" target="_blank">
             <div class="project-img">
-                <img src="img/tenzies/tenzies-main.png" alt="">
+                <img src="img/quizzical/quizzical-main.png" alt="">
             </div>
             </a>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?</p>
