--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 </a>
                 
                 <!-- Portfolio item 04 -->
-                <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
+                <a href="quizzical.html" class="portfolio__item">
+                    <img src="img/quizzical/quizzical-portfolio.png" alt="" class="portfolio__img">
                 </a>
                 
                 <!-- Portfolio item 05 -->
